--- a/docs/assets/css/styles_types_bicycles.css
+++ b/docs/assets/css/styles_types_bicycles.css
@@ -311,6 +311,9 @@ footer {
         font-family: "Anek Devanagari", sans-serif;
 
     }
+    .banner-text{
+        display: none;
+    }
 
     .fa-sharp.fa-solid.fa-bars {
         display: block;
@@ -339,7 +342,7 @@ footer {
     }
 
     .image {
-        width: 100%;
+        width: 90%;
     }
 
     #first-type {
